Breaking change: Standardize APIs on List where possible. Deprecate trampolines.